# aether

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  VERSION
docs/: aether_architecture_and_rationale.md  aether_doc_maintenance.md  aether_for_llms_and_others.md  aether_for_llms_with_small_contexts.md  aether_guided_benchmark.md  aether_specialization_findings.md  ideas_and_todo.md  parser_roadmap.md
docs/archive/: aether_specialization_findings.md
examples/base/: README.md  clamp_minmax  contracts  control_flow  dynamic_arrays  effects_contracts  for_range  http_weather  module_demo  number_formatting  parallel_calls  parsing  pure_functions  recursion  self_alias  strings  text_var_builtins  toon_access  toon_blocks  toon_handles  toon_parse_file  toon_variable_parse  type_blocks  type_init
examples/sdl/: README.md  circles.aether
examples/showcase/: README.md  agent_report  gradebook
src/aether/: ast_parser.c  ast_prepasses.c  ast_prepasses.h  diagnostics.c  diagnostics.h  parser.c  parser.h  semantic.c  state.c  translate.c  translate.h
tests/: alias_string_literal_pass.aether  array_literal_after_loop_pass.aether  array_literal_tmp_slot_pass.aether  array_mutation_warning_pass.aether  array_record_literal_pass.aether  array_slice_pass.aether  array_value_semantics_pass.aether  backend_unknown_field_coded_fail.aether  bitwise_shift_ops_pass.aether  bitwise_shift_type_mismatch_fail.aether  chained_method_call_shadow_builtin_pass.aether  compound_lines_pass.aether  continue_loop_var_reuse_pass.aether  contract_annotation_comment_pass.aether  contract_collection_length_pass.aether  contract_collection_result_fail.aether  dynamic_array_append_multi_pass.aether  dynamic_array_concat_let_pass.aether  dynamic_array_concat_pass.aether  else_if_expression_pass.aether  extension_method_dot_call_pass.aether  file_io_pass.aether  fixed_size_array_fail.aether  function_empty_return_fail.aether  fx_brace_next_line_pass.aether  fx_cross_line_call_fail.aether  http_mstream_compile_pass.aether  http_session_fx_fail.aether  if_leading_paren_subexpr_pass.aether  inferred_object_mutation_pass.aether  legacy_method_call_shadow_pass.aether  legacy_method_call_undefined_fail.aether  loop_range_bool_bound_fail.aether  method_undefined_fail.aether  module_calc  module_helper_collision_a  module_helper_collision_b  module_imported_main_not_entry_point_pass.aether  module_intramodule_call_pass.aether  module_lib_with_main  (+45 more)
tests/manual/exec_terminal_reclaim/: README.md  fixture.aether  rogue_shell.c  verify.py
tools/: bump_guide_version.py  bump_version.py
tools/hooks/: pre-commit
